# kolaw

./: .env.bak  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_COMPLETE.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
apps/api/: main.py  schemas.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  precedent-corpus-roadmap.md
eval/: param_sweep.py  regression-2026-05-06.jsonl  run_regression.py
eval/pageindex-rlm-poc/: README.md  ask_kolaw.py  ask_pageindex_rlm.py  build_tree.py  llm_clients.py  questions.json  render_report_tables.py  run_batch.py  run_one.py  score_answers.py
examples/: citation-badges.html
scripts/: discord_backfill.py  ingest_v2.sh  ingest_v3.sh  swap_collection.sh  weekly-backup.sh  weekly-update.sh
services/crossref/: build_index.py  byeolpyo_body.py  byeolpyo_lookup.py  citation_db.py  citation_index.py  lookup.py  tree_render.py
services/data/: article_lookup.py  beopmang_client.py  data_go_kr_court.py  kolmcp_client.py  law_go_kr.py  legalize_kr.py  lexguard_client.py
services/fast_search/: incremental_update.py  ingest.py  ingest_constitutional.py  ingest_drf.py  ingest_interpretations.py  ingest_legalize_kr.py  ingest_precedents.py  search.py  (+1 more)
tests/: test_article.py  test_beopmang_investigation.py  test_deep_mock.py  test_discord_backfill.py  test_fast_search.py  test_grep_search.py  test_health.py  test_ingest_legalize_kr.py  test_law_go_kr.py  test_llm_router_deepseek.py  test_llm_router_dry_run.py  test_rlm_minimal_loop.py  test_rlm_phase3.py  test_rlm_sandbox.py
(+75 files in other folders)
