[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kolaw"
version = "0.1.0"
description = "Korean Law Library & Research Infra for y-Tower agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
